<resources>
    <string name="app_name" translatable="false">Aprovado</string>
    <string name="text_nomeAluno">Nome do Aluno</string>
    <string name="hint_nome_aluno">Digite o nome do aluno</string>
    <string name="text_nota1">Nota 1</string>
    <string name="hint_nota1">Digite a primeira nota</string>
    <string name="text_nota2">Nota 2</string>
    <string name="hint_nota2">Digite a segunda nota</string>
    <string name="text_calcular">Calcular</string>
    <string name="text_limparDados">Limpar Dados</string>
    <string name="text_aluno">Aluno:</string>
    <string name="text_media">Média:</string>
    <string name="text_situacao">Situação:</string>
    <string name="required_nomeAluno">Nome do aluno é um campo obrigatório</string>
    <string name="required_nota1">Nota 1 é um campo obrigatório</string>
    <string name="required_nota2">Nota 2 é um campo obrigatório</string>
</resources>
