<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/background"
    android:padding="16dp"
    tools:context=".view.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/text_nomeAluno"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nome_aluno"
        android:padding="10dp"
        android:background="@color/backgroundColorInput"
        android:id="@+id/editNomeAluno"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/text_nota1"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nota1"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:background="@color/backgroundColorInput"
        android:id="@+id/editTextNota1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/text_nota2"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nota2"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:background="@color/backgroundColorInput"
        android:id="@+id/editTextNota2"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/text_calcular"
                android:background="@color/colorGreenPrimary"
                android:onClick="calcular"
                android:id="@+id/buttonCalcular"/>

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/text_limparDados"
                android:background="@color/colorGreyPrimary"
                android:onClick="limparDados"
                android:id="@+id/buttonLimparDados"/>

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="25dp"
        android:text="@string/text_aluno"
        android:id="@+id/textViewNomeAluno"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/text_media"
        android:id="@+id/textViewMediaAluno"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:text="@string/text_situacao"
        android:id="@+id/textViewSituacaoAluno"/>



</LinearLayout>